# backend/core/src/main/kotlin/org/firstapproval/backend/core/web/PublicationController.kt
@@ -14,9 +14,13 @@ import org.firstapproval.backend.core.config.security.user
 import org.firstapproval.backend.core.domain.ipfs.IpfsClient
 import org.firstapproval.backend.core.domain.publication.PublicationService
 import org.firstapproval.backend.core.domain.publication.toApiObject
+import org.springframework.core.io.InputStreamResource
+import org.springframework.core.io.Resource
+import org.springframework.http.MediaType
 import org.springframework.http.ResponseEntity
 import org.springframework.http.ResponseEntity.ok
 import org.springframework.web.bind.annotation.RestController
+import java.net.URLConnection
 import java.util.UUID
 import org.firstapproval.backend.core.domain.publication.AccessType as AccessTypeEntity
 
@@ -78,8 +82,41 @@ class PublicationController(
     }
 
     override fun getDownloadLink(id: UUID): ResponseEntity<String> {
-        val downloadLink = publicationService.getDownloadLink(id)
-        return ok().body(downloadLink.url)
+        val downloadLink = publicationService.getDownloadLink(authHolderService.user, id)
+        return ok().body(downloadLink)
+    }
+
+    override fun downloadPublicationFiles(downloadToken: String): ResponseEntity<Resource> {
+        val file = publicationService.getPublicationArchive(downloadToken)
+        val contentType: MediaType = try {
+            MediaType.parseMediaType(URLConnection.guessContentTypeFromName(file.name))
+        } catch (ex: Exception) {
+            MediaType.APPLICATION_OCTET_STREAM
+        }
+        return ok()
+            .contentType(contentType)
+            .header("Content-disposition", "attachment; filename=\"${file.name}\"")
+            .contentLength(file.s3Object.objectMetadata.contentLength)
+            .body(InputStreamResource(file.s3Object.objectContent))
+    }
+
+    override fun downloadPublicationSampleFiles(id: UUID): ResponseEntity<Resource> {
+        val file = publicationService.getPublicationSamplesArchive(id)
+        val contentType: MediaType = try {
+            MediaType.parseMediaType(URLConnection.guessContentTypeFromName(file.name))
+        } catch (ex: Exception) {
+            MediaType.APPLICATION_OCTET_STREAM
+        }
+        return ok()
+            .contentType(contentType)
+            .header("Content-disposition", "attachment; filename=\"${file.name}\"")
+            .contentLength(file.s3Object.objectMetadata.contentLength)
+            .body(InputStreamResource(file.s3Object.objectContent))
+    }
+
+    override fun incrementPublicationViewCount(id: UUID): ResponseEntity<Void> {
+        publicationService.incrementViewCount(id)
+        return ok().build()
     }
 
     override fun editPublication(id: UUID, publicationEditRequest: PublicationEditRequest): ResponseEntity<Void> {
